[gd_scene load_steps=13 format=3 uid="uid://8okscw02p0dw"]

[ext_resource type="Script" path="res://minigames/cuchina disastrosa/main.gd" id="1_j2gs8"]
[ext_resource type="PackedScene" uid="uid://d32f23hyaxgw3" path="res://minigames/cuchina disastrosa/jugador.tscn" id="2_2d736"]
[ext_resource type="Texture2D" uid="uid://chh8ejqmdghce" path="res://minigames/cuchina disastrosa/fondo_cocina.png" id="3_8a4ba"]
[ext_resource type="Texture2D" uid="uid://bpp6rvvxv50p1" path="res://minigames/cuchina disastrosa/bote_espaguetis.png" id="3_a3lwu"]
[ext_resource type="Texture2D" uid="uid://cgo8kerqymwer" path="res://minigames/cuchina disastrosa/Lumache.png" id="4_mdvyd"]
[ext_resource type="Texture2D" uid="uid://dbt66x3an2t4q" path="res://minigames/cuchina disastrosa/Lasaña.png" id="5_11y35"]
[ext_resource type="Texture2D" uid="uid://cakyfkoxfc7vj" path="res://minigames/cuchina disastrosa/Macarrones.png" id="6_30325"]
[ext_resource type="Texture2D" uid="uid://cwekshbx6xtcn" path="res://minigames/cuchina disastrosa/ravioli.png" id="7_vrsy1"]
[ext_resource type="AudioStream" uid="uid://ba7ixm7tnv8ch" path="res://minigames/cuchina disastrosa/Sonido_proyectil.mp3" id="9_lwuto"]
[ext_resource type="AudioStream" uid="uid://sam2l77k2102" path="res://minigames/cuchina disastrosa/Musica_perder.mp3" id="10_iyspl"]
[ext_resource type="AudioStream" uid="uid://cbo0aw27hj535" path="res://minigames/cuchina disastrosa/Sonido_salto.mp3" id="11_4fykh"]
[ext_resource type="AudioStream" uid="uid://bwc8tm51xof4i" path="res://minigames/cuchina disastrosa/Sonido_marmol.mp3" id="12_h1tsu"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j2gs8")

[node name="Fondo cocina" type="Sprite2D" parent="."]
position = Vector2(360, 640)
scale = Vector2(3.14, 3.14)
texture = ExtResource("3_8a4ba")

[node name="Bote espaguetis" type="Sprite2D" parent="."]
position = Vector2(316, 220)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_a3lwu")

[node name="Lumache" type="Sprite2D" parent="."]
position = Vector2(412, 790)
scale = Vector2(0.22, 0.22)
texture = ExtResource("4_mdvyd")

[node name="Ravioli" type="Sprite2D" parent="."]
position = Vector2(491, 791)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_vrsy1")

[node name="Macarrones" type="Sprite2D" parent="."]
position = Vector2(218, 785)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_30325")

[node name="Lasaña" type="Sprite2D" parent="."]
position = Vector2(546, 233)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_11y35")

[node name="Jugador" parent="." instance=ExtResource("2_2d736")]
position = Vector2(250, 889)
scale = Vector2(0.5, 0.5)

[node name="Timer_cubiertos" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Sonido_proyectil" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_lwuto")
volume_db = -5.5

[node name="Sonido_perder" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_iyspl")
volume_db = -1.0

[node name="Sonido_salto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_4fykh")

[node name="Sonido_marmol" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_h1tsu")

[connection signal="timeout" from="Timer_cubiertos" to="." method="_on_timer_cubiertos_timeout"]
